--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -13,6 +13,7 @@ azure-cosmos==3.2.0
 azure-datalake-store==0.0.49
 azure-functions-devops-build==0.0.22
 azure-graphrbac==0.60.0
+azure-identity==1.5.0b2
 azure-keyvault==1.1.0
 azure-keyvault-administration==4.0.0b1
 azure-mgmt-advisor==2.0.1
@@ -110,7 +111,7 @@ msrestazure==0.6.3
 oauthlib==3.0.1
 paramiko==2.6.0
 pbr==5.3.1
-portalocker==1.2.1
+portalocker==1.7
 psutil==5.7.2
 pycparser==2.19
 PyJWT==1.7.1
