update template specs tests

--- a/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_create_template_specs_with_artifacts.yaml
+++ b/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_create_template_specs_with_artifacts.yaml
@@ -32,7 +32,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 06 Jan 2021 04:43:37 GMT
+      - Wed, 06 Jan 2021 16:42:56 GMT
       expires:
       - '-1'
       pragma:
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 06 Jan 2021 04:43:38 GMT
+      - Wed, 06 Jan 2021 16:42:56 GMT
       expires:
       - '-1'
       pragma:
@@ -122,9 +122,9 @@ interactions:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-01-06T04:43:40.5751362Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-01-06T16:42:59.1617063Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-01-06T04:43:40.5751362Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
+        \"2021-01-06T16:42:59.1617063Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
         \"create-spec000003\",\r\n    \"description\": \"AzCLI test root template
         spec\"\r\n  },\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002\",\r\n
         \ \"type\": \"Microsoft.Resources/templateSpecs\",\r\n  \"name\": \"cli-test-create-template-spec000002\"\r\n}"
@@ -136,7 +136,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 06 Jan 2021 04:43:40 GMT
+      - Wed, 06 Jan 2021 16:42:58 GMT
       expires:
       - '-1'
       pragma:
@@ -202,7 +202,7 @@ interactions:
       "Incremental", "templateLink": {"relativePath": "artifacts/create_resource_group.json",
       "contentVersion": "1.0.0.0"}, "parameters": {"rgName": {"value": "[parameters(''rgName'')]"},
       "rgLocation": {"value": "[parameters(''rgLocation'')]"}}}}, {"type": "Microsoft.Resources/deployments",
-      "apiVersion": "2019-10-01", "name": "keyVaultAndSecret", "resourceGroup": "[parameters(''rgName'')s]",
+      "apiVersion": "2019-10-01", "name": "keyVaultAndSecret", "resourceGroup": "[parameters(''rgName'')]",
       "dependsOn": ["deploymentRg"], "properties": {"mode": "Incremental", "templateLink":
       {"relativePath": "artifacts/create_key_vault_with_secret.json", "contentVersion":
       "1.0.0.0"}, "parameters": {"keyVaultName": {"value": "[parameters(''keyVaultName'')]"}}}}],
@@ -217,7 +217,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '4625'
+      - '4624'
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
@@ -233,9 +233,9 @@ interactions:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-01-06T04:43:41.6550794Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-01-06T16:43:00.3818843Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-01-06T04:43:41.6550794Z\"\r\n  },\r\n  \"properties\": {\r\n    \"artifacts\":
+        \"2021-01-06T16:43:00.3818843Z\"\r\n  },\r\n  \"properties\": {\r\n    \"artifacts\":
         [\r\n      {\r\n        \"template\": {\r\n          \"$schema\": \"https://schema.management.azure.com/schemas/2018-05-01/subscriptionDeploymentTemplate.json#\",\r\n
         \         \"contentVersion\": \"1.0.0.0\",\r\n          \"parameters\": {\r\n
         \           \"rgName\": {\r\n              \"type\": \"string\"\r\n            },\r\n
@@ -342,7 +342,7 @@ interactions:
         \"[parameters('rgLocation')]\"\r\n              }\r\n            }\r\n          }\r\n
         \       },\r\n        {\r\n          \"type\": \"Microsoft.Resources/deployments\",\r\n
         \         \"apiVersion\": \"2019-10-01\",\r\n          \"name\": \"keyVaultAndSecret\",\r\n
-        \         \"resourceGroup\": \"[parameters('rgName')s]\",\r\n          \"dependsOn\":
+        \         \"resourceGroup\": \"[parameters('rgName')]\",\r\n          \"dependsOn\":
         [\r\n            \"deploymentRg\"\r\n          ],\r\n          \"properties\":
         {\r\n            \"mode\": \"Incremental\",\r\n            \"templateLink\":
         {\r\n              \"relativePath\": \"artifacts/create_key_vault_with_secret.json\",\r\n
@@ -356,11 +356,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '9458'
+      - '9457'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 06 Jan 2021 04:43:41 GMT
+      - Wed, 06 Jan 2021 16:42:59 GMT
       expires:
       - '-1'
       pragma:
@@ -400,9 +400,9 @@ interactions:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-01-06T04:43:40.5751362Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-01-06T16:42:59.1617063Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-01-06T04:43:41.6550794Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
+        \"2021-01-06T16:43:00.3818843Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
         \"create-spec000003\",\r\n    \"description\": \"AzCLI test root template
         spec\"\r\n  },\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002\",\r\n
         \ \"type\": \"Microsoft.Resources/templateSpecs\",\r\n  \"name\": \"cli-test-create-template-spec000002\"\r\n}"
@@ -414,7 +414,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 06 Jan 2021 04:43:42 GMT
+      - Wed, 06 Jan 2021 16:43:01 GMT
       expires:
       - '-1'
       pragma:
@@ -481,7 +481,7 @@ interactions:
       "Incremental", "templateLink": {"relativePath": "artifacts/create_resource_group.json",
       "contentVersion": "1.0.0.0"}, "parameters": {"rgName": {"value": "[parameters(''rgName'')]"},
       "rgLocation": {"value": "[parameters(''rgLocation'')]"}}}}, {"type": "Microsoft.Resources/deployments",
-      "apiVersion": "2019-10-01", "name": "keyVaultAndSecret", "resourceGroup": "[parameters(''rgName'')s]",
+      "apiVersion": "2019-10-01", "name": "keyVaultAndSecret", "resourceGroup": "[parameters(''rgName'')]",
       "dependsOn": ["deploymentRg"], "properties": {"mode": "Incremental", "templateLink":
       {"relativePath": "artifacts/create_key_vault_with_secret.json", "contentVersion":
       "1.0.0.0"}, "parameters": {"keyVaultName": {"value": "[parameters(''keyVaultName'')]"}}}}],
@@ -496,7 +496,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '4566'
+      - '4565'
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
@@ -512,9 +512,9 @@ interactions:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-01-06T04:43:41.6550794Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-01-06T16:43:00.3818843Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-01-06T04:43:43.0362341Z\"\r\n  },\r\n  \"properties\": {\r\n    \"artifacts\":
+        \"2021-01-06T16:43:01.5327962Z\"\r\n  },\r\n  \"properties\": {\r\n    \"artifacts\":
         [\r\n      {\r\n        \"template\": {\r\n          \"$schema\": \"https://schema.management.azure.com/schemas/2018-05-01/subscriptionDeploymentTemplate.json#\",\r\n
         \         \"contentVersion\": \"1.0.0.0\",\r\n          \"parameters\": {\r\n
         \           \"rgName\": {\r\n              \"type\": \"string\"\r\n            },\r\n
@@ -620,7 +620,7 @@ interactions:
         \"[parameters('rgLocation')]\"\r\n              }\r\n            }\r\n          }\r\n
         \       },\r\n        {\r\n          \"type\": \"Microsoft.Resources/deployments\",\r\n
         \         \"apiVersion\": \"2019-10-01\",\r\n          \"name\": \"keyVaultAndSecret\",\r\n
-        \         \"resourceGroup\": \"[parameters('rgName')s]\",\r\n          \"dependsOn\":
+        \         \"resourceGroup\": \"[parameters('rgName')]\",\r\n          \"dependsOn\":
         [\r\n            \"deploymentRg\"\r\n          ],\r\n          \"properties\":
         {\r\n            \"mode\": \"Incremental\",\r\n            \"templateLink\":
         {\r\n              \"relativePath\": \"artifacts/create_key_vault_with_secret.json\",\r\n
@@ -634,11 +634,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '9394'
+      - '9393'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 06 Jan 2021 04:43:43 GMT
+      - Wed, 06 Jan 2021 16:43:01 GMT
       expires:
       - '-1'
       pragma:
@@ -685,7 +685,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Wed, 06 Jan 2021 04:43:45 GMT
+      - Wed, 06 Jan 2021 16:43:04 GMT
       expires:
       - '-1'
       pragma:
