--- a/scripts/live_test/monitor.yml
+++ b/scripts/live_test/monitor.yml
@@ -15,4 +15,5 @@ jobs:
         addToPath: true
         architecture: 'x64'
     - bash: |
+        pip install mysql-connector-python
         python /home/vsts/work/1/s/scripts/live_test/monitor.py
