--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,6 +25,7 @@
 /src/azure-cli/azure/cli/command_modules/container/ @zhoxing-ms @fengzhou-msft
 /src/azure-cli/azure/cli/command_modules/consumption/ @sandeepnl
 /src/azure-cli/azure/cli/command_modules/dls/ @akharit @rahuldutta90 @Juliehzl @jsntcy
+/src/azure-cli/azure/cli/command_modules/dms/ @temandr
 /src/azure-cli/azure/cli/command_modules/extension/ @fengzhou-msft @haroldrandom
 /src/azure-cli/azure/cli/command_modules/keyvault/ @bim-msft @fengzhou-msft @yungezz @houk-ms
 /src/azure-cli/azure/cli/command_modules/monitor/ @msyyc @jsntcy @kairu-ms
